Small modifications for post descriptions

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -62,18 +62,20 @@ model = Sequential()
 ```
 
 ### 3. `model`にDense層（全結合層）を追加する  
-* 初めてレイヤーを追加するときには，`input_shape`を指定する必要があります
 ```
 model.add(Dense(input_dim=2, units=1))
 ```
 
-* 全結合層という用語はゼロから〜の二章には登場していませんが，ここではパーセプトロンと同じと思ってください．  
+* 全結合層という用語はゼロから〜の二章には登場していませんが，ここでは単純パーセプトロンと同じと思ってください．  
 参考程度に，`input_dim=2, units=1`のときのDense層の様子を概念図にしたものを以下に示します．
 
 ![Dense層の様子の概念図](../resources/2019-04-13/example_dense.png)
 
 ### 4. `model`に重みを与える
-ゼロから〜の二章では予め重みとバイアスが与えられているので，この実装でも与えます．  
+* ゼロから〜の二章では予め重みとバイアスが与えられているので，この実装でも与えます．   
+
+* 重みとバイアスの初期設定には，`model.set_weights()`を使用します．  
+引数は重みの入ったリストです．
 ```
 model.set_weights([np.array([[0.5], [0.5]]), np.array([-0.7])])
 ```
