Added a new post & Modified some parts

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -27,7 +27,7 @@ lang: ja_JP
 ```
 pip install keras
 ```
-参考: [https://keras.io/ja/](https://keras.io/ja/)
+_参考: [https://keras.io/ja/](https://keras.io/ja/)_
 
 # 2. プロジェクトの作成
 ---
@@ -79,7 +79,7 @@ model.add(Dense(input_dim=2, units=1))
 ```
 model.set_weights([np.array([[0.5], [0.5]]), np.array([-0.7])])
 ```
-参照: ゼロから〜のP27
+_参照: ゼロから〜のP27_
 
 ### 5. テストする  
 * モデルのテストは`predict`メソッドで行えます．  
@@ -152,7 +152,7 @@ _output = Dense(units=1)(_input)
 ```
 model = Model(inputs=_input, outputs=_output)
 ```
-参考: [https://keras.io/ja/getting-started/functional-api-guide/](https://keras.io/ja/getting-started/functional-api-guide/)
+_参考: [https://keras.io/ja/getting-started/functional-api-guide/](https://keras.io/ja/getting-started/functional-api-guide/)_
 
 ### 4. 重みを与える & テストする  
 Sequentialモデルと同じなので割愛します．  
