--- a/404.md
+++ b/404.md
@@ -6,4 +6,6 @@ permalink: /404.html
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+お探しのページは存在しません．[トップページ]({{ site.baseurl }}/) にお戻りください．
+
+[<img src="{{ site.baseurl }}/resources/404/404.png" alt="Page Not Found; ページが見つかりませんでした" style="width: 400px;"/>]({{ site.baseurl }}/)
