Some adjustments for the site layout.

--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -17,6 +17,17 @@ lang: ja_JP
 [第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)  
 [第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-1838422896597988"
+     data-ad-slot="7676908062"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 # 1. プロジェクトの作成
 ---
 はじめに，２層ニューラルネットワーク用のプロジェクトを作成してください．  
