Added GitHub Link

--- a/_posts/2019-4-13-DL-Intro-1.md
+++ b/_posts/2019-4-13-DL-Intro-1.md
@@ -18,6 +18,24 @@ lang: ja_JP
 
 それでは，まずはKerasのインストールから始めていきましょう．
 
+* ゼロから作るDeep Learningとともに学ぶフレームワークシリーズの各リンク  
+[第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)   
+[第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)  
+[第三弾：ニューラルネットワークの学習編](https://gucci-j.github.io/DL-Intro-3/)  
+第四弾：学習テクニック編  
+第五弾：畳み込みニューラルネットワーク編  
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-1838422896597988"
+     data-ad-slot="7676908062"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 # 1. Kerasのインストール
 ---
 (**注意**) 本プロジェクトでは，すでにPythonやNumPy等のインストールは終えているものとしてスタートします．  
@@ -175,4 +193,4 @@ NAND, ORゲートも実装してみると良いでしょう．
 
 # ソースコード
 ---
-ソースコードは，**GitHub**で5月中に入手できるようにする予定です．
+ソースコードは，[GitHub](https://github.com/gucci-j/intro-deep-learning-keras)にて公開しています．
