--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -17,6 +17,24 @@ lang: ja_JP
 _（3層ニューラルネットワーク）参考: ゼロから〜のP58〜65_  
 _（MNIST）参考: ゼロから〜のP72〜81_
 
+* ゼロから作るDeep Learningとともに学ぶフレームワークシリーズの各リンク  
+[第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)   
+[第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)  
+[第三弾：ニューラルネットワークの学習編](https://gucci-j.github.io/DL-Intro-3/)  
+第四弾：学習テクニック編  
+第五弾：畳み込みニューラルネットワーク編  
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-1838422896597988"
+     data-ad-slot="7676908062"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 # 1. 3層ニューラルネットワークの実装
 ---
 ## 1.1 プロジェクトの作成
@@ -56,6 +74,7 @@ import numpy as np
 * 下の例では，簡単のため入れ子式に活性化関数を定義しましたが，活性化関数をレイヤーインスタンスとして定義することもできます．  
 
 <div style="text-align: center">＜活性化関数を入れ子式に定義する例＞</div>  
+
 ```
 _input = Input(shape=(2, ))
 _layer1 = Dense(units=3, activation='sigmoid')(_input)
@@ -64,6 +83,7 @@ _output = Dense(units=2)(_layer2)
 ```
 
 <div style="text-align: center">＜活性化関数をインスタンスとして定義する例＞</div>  
+
 ```
 from keras.layers import Activation
 _input = Input(shape=(2, ))
@@ -158,6 +178,18 @@ Output:
 ```
 
 見事，ゼロから〜 P65に示されている出力値と同一の値を得ることができました！
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 記事内広告2 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1838422896597988"
+     data-ad-slot="1400355899"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 # 2. 手書き数字認識（MNIST）
 ---
@@ -323,4 +355,4 @@ Accuracy: 0.9352
 
 # ソースコード
 ---
-ソースコードは，**GitHub**で5月中に入手できるようにする予定です．
+ソースコードは，[GitHub](https://github.com/gucci-j/intro-deep-learning-keras)にて公開しています．
