--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -13,9 +13,12 @@ lang: ja_JP
 
 では，２層のニューラルネットワークを題材にMNISTの分類モデルをKerasで実装し，学習させてみましょう！
 
-* 前回までのリンク  
-[第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)  
-[第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)
+* ゼロから作るDeep Learningとともに学ぶフレームワークシリーズの各リンク  
+[第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)   
+[第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)  
+[第三弾：ニューラルネットワークの学習編](https://gucci-j.github.io/DL-Intro-3/)  
+第四弾：学習テクニック編  
+第五弾：畳み込みニューラルネットワーク編  
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -189,6 +192,18 @@ Epoch 17/17
 60000/60000 [==============================] - 2s 27us/step - loss: 0.1771 - acc: 0.9497
 ```
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 記事内広告2 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1838422896597988"
+     data-ad-slot="1400355899"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 # 4. 学習結果の表示
 ---
 ゼロから〜のP119とP121では，それぞれ損失関数の値と認識精度の推移を図にしているので，ここでも実際に図にしてみましょう！
@@ -295,4 +310,4 @@ _参考: [（Matplotlibでプロットを一旦クリアする）](https://coded
 
 # ソースコード
 ---
-ソースコードは，**GitHub**で5月上旬に入手できるようにする予定です．
+ソースコードは，[GitHub](https://github.com/gucci-j/intro-deep-learning-keras)にて公開しています．
