--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -17,12 +17,14 @@ lang: ja_JP
 _（3層ニューラルネットワーク）参考: ゼロから〜のP58〜65_  
 _（MNIST）参考: ゼロから〜のP72〜81_
 
-* ゼロから作るDeep Learningとともに学ぶフレームワークシリーズの各リンク  
-[第一弾：パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)   
-[第二弾：3層ニューラルネットワーク & 手書き数字認識編](https://gucci-j.github.io/DL-Intro-2/)  
-[第三弾：ニューラルネットワークの学習編](https://gucci-j.github.io/DL-Intro-3/)  
-第四弾：学習テクニック編  
-第五弾：畳み込みニューラルネットワーク編  
+<div class="link_box">
+    <span class="box-title">「ゼロからKeras」シリーズリンク</span>
+    <p><a href="https://gucci-j.github.io/DL-Intro-1/">第一弾：パーセプトロン編</a></p>
+    <p><a href="https://gucci-j.github.io/DL-Intro-2/">第二弾：3層ニューラルネットワーク & 手書き数字認識編</a></p>  
+    <p><a href="https://gucci-j.github.io/DL-Intro-3/">第三弾：ニューラルネットワークの学習編</a></p>
+    <p>第四弾：学習テクニック編</p>
+    <p>第五弾：畳み込みニューラルネットワーク編</p>
+</div>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
