Modified toc layout

--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -19,9 +19,9 @@ _（MNIST）参考: ゼロから〜のP72〜81_
 
 <div class="link_box">
     <span class="box-title">「ゼロからKeras」シリーズリンク</span>
-    <p><a href="https://gucci-j.github.io/DL-Intro-1/">第一弾：パーセプトロン編</a></p>
-    <p><a href="https://gucci-j.github.io/DL-Intro-2/">第二弾：3層ニューラルネットワーク & 手書き数字認識編</a></p>  
-    <p><a href="https://gucci-j.github.io/DL-Intro-3/">第三弾：ニューラルネットワークの学習編</a></p>
+    <p>第一弾：<a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
+    <p>第二弾：<a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
+    <p>第三弾：<a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
     <p>第四弾：学習テクニック編</p>
     <p>第五弾：畳み込みニューラルネットワーク編</p>
 </div>
