Add tag functionalities

--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -4,6 +4,8 @@ title: ゼロから作るDeep Learningとともに学ぶフレームワーク（
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第二弾として，Kerasで3層ニューラルネットワークの実装と手書き数字認識に取り組みます．
 mathjax: true
 lang: ja_JP
+tags:
+- 「ゼロからKeras」シリーズ
 ---
 
 # はじめに
