--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -3,6 +3,8 @@ layout: post
 title: ゼロから作るDeep Learningとともに学ぶフレームワーク（ニューラルネットワークの学習編）
 description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第三弾として，Kerasで2層ニューラルネットワークを実装し，データセットを活用したモデルの学習と分類実験を行います．
 lang: ja_JP
+tags:
+- 「ゼロからKeras」シリーズ
 ---
 
 # はじめに
