Add a new post & modify a contact form

--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -16,15 +16,15 @@ tags:
 
 それでは，今回は3層ニューラルネットワークをKerasで実装し，実際に手書き数字認識（MNISTデータセットの分類）をしていきましょう！  
 
-_（3層ニューラルネットワーク）参考: ゼロから〜のP58〜65_  
-_（MNIST）参考: ゼロから〜のP72〜81_
+_（3層ニューラルネットワーク）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP58〜65_  
+_（MNIST）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81_
 
 <div class="link_box">
     <span class="box-title">「ゼロからKeras」シリーズリンク</span>
-    <p>第一弾：<a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
-    <p>第二弾：<a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
-    <p>第三弾：<a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
-    <p>第四弾：学習テクニック編</p>
+    <p>第一弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
+    <p>第二弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
+    <p>第三弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
+    <p>第四弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-4/">学習テクニック編</a></p>
     <p>第五弾：畳み込みニューラルネットワーク編</p>
 </div>
 
@@ -97,7 +97,7 @@ _layer2 = Dense(units=2)(_activ1)
 _activ2 = Activation('sigmoid')(_layer2)
 _output = Dense(units=2)(_activ2)
 ```
-_参考: [https://keras.io/ja/activations/](https://keras.io/ja/activations/)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [https://keras.io/ja/activations/](https://keras.io/ja/activations/)_
 
 
 ### 1.2.3 モデルを定義する
@@ -152,7 +152,7 @@ weight_array = [w1, b1, w2, b2, w3, b3]
 model.set_weights(weight_array)
 print(model.get_weights())
 ```
-_参照: ゼロから〜 P65_
+_<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜 P65_
 
 Output: 
 ```
@@ -199,7 +199,7 @@ Output:
 ---
 ここからは，今実装した3層ニューラルネットワークを活用して，手書き数字を実際に分類していきます．  
 
-_参考: ゼロから〜のP72〜81_
+_<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81_
 ## 2.1 MNISTデータセットの読み込み
 Kerasでは，MNISTデータセットは簡単にダウンロード&呼び出しできるようになっています．
 
@@ -212,7 +212,7 @@ from keras.datasets import mnist
 print(x_train.shape)
 print(y_train.shape)
 ```
-_参照: [https://keras.io/ja/datasets/#mnist](https://keras.io/ja/datasets/#mnist)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [https://keras.io/ja/datasets/#mnist](https://keras.io/ja/datasets/#mnist)_
 
 Output:
 ```
@@ -328,7 +328,7 @@ def load_weight():
 model.set_weights(load_weight())
 ```
 
-_参考: [Kerasでモデルの保存/ロードを行う](https://keras.io/ja/getting-started/faq/#keras-model)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [Kerasでモデルの保存/ロードを行う](https://keras.io/ja/getting-started/faq/#keras-model)_
 
 ## 2.4 テストする
 それでは，ゼロから〜のP77と同様に実装したモデルをテストしていきましょう．  
