--- a/_posts/2019-4-26-DL-Intro-3.md
+++ b/_posts/2019-4-26-DL-Intro-3.md
@@ -17,10 +17,10 @@ tags:
 
 <div class="link_box">
     <span class="box-title">「ゼロからKeras」シリーズリンク</span>
-    <p>第一弾：<a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
-    <p>第二弾：<a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
-    <p>第三弾：<a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
-    <p>第四弾：学習テクニック編</p>
+    <p>第一弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-1/">パーセプトロン編</a></p>
+    <p>第二弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
+    <p>第三弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
+    <p>第四弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-4/">学習テクニック編</a></p>
     <p>第五弾：畳み込みニューラルネットワーク編</p>
 </div>
 
@@ -148,9 +148,9 @@ y_train[0]: [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]
 from keras.optimizers import SGD
 model.compile(optimizer=SGD(lr=0.1), loss='categorical_crossentropy', metrics=['accuracy'])
 ```
-_参照: [（Kerasで利用可能な損失関数について）](https://keras.io/ja/losses/)_  
-_参照: [（Kerasで利用可能な最適化アルゴリズムについて）](https://keras.io/ja/optimizers/)_  
-_参照: [（Kerasにおける評価関数について）](https://keras.io/ja/metrics/)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Kerasで利用可能な損失関数について）](https://keras.io/ja/losses/)_  
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Kerasで利用可能な最適化アルゴリズムについて）](https://keras.io/ja/optimizers/)_  
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Kerasにおける評価関数について）](https://keras.io/ja/metrics/)_
 
 (**注意**) Kerasをはじめとする深層学習フレームワークでは，ユーザが順伝播の計算グラフを構築すると，フレームワークが自動的に逆伝播用の処理をブラックボックス的に行ってくれます．
 したがって，ゼロから〜の5章の部分は，フレームワーク使用時には実装する必要がありません．（自分でレイヤーを設計することがない限り．）
@@ -175,7 +175,7 @@ _参照: [（Kerasにおける評価関数について）](https://keras.io/ja/m
 
 * `validation_data`にテストデータを与えることで，エポックごとにモデルのテスト精度を測ることができます．
 
-_参照: [（Kerasのfitメソッドにおける引数と戻り値の説明）](https://keras.io/ja/models/model/#fit)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Kerasのfitメソッドにおける引数と戻り値の説明）](https://keras.io/ja/models/model/#fit)_
 
 
 
@@ -225,7 +225,7 @@ pip install matplotlib
 
 （**注意**）macOSでMatplotlibをインポートすると，バックエンドの問題でエラーが発生することがあります．その場合は，下記を参照してバックエンドを書き換えてください．  
 
-_参照: [（Matplotlibでインポートエラーが出るときの対処法）](https://qiita.com/Gen6/items/78d83d117ef67e0d53c2)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Matplotlibでインポートエラーが出るときの対処法）](https://qiita.com/Gen6/items/78d83d117ef67e0d53c2)_
 
 ### 4.1.2 Historyオブジェクトの中身
 ---
@@ -303,7 +303,7 @@ Output:
 
 図から，テストデータの認識精度を訓練データの認識精度が大幅に上回る現象は確認できないので，モデルの過学習は起きていないことがわかります．
 
-_参考: [（Matplotlibでプロットを一旦クリアする）](https://codeday.me/jp/qa/20181207/13787.html)_
+_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [（Matplotlibでプロットを一旦クリアする）](https://codeday.me/jp/qa/20181207/13787.html)_
 
 # まとめ
 ---
