Add share functionalities & Modify headings layout

--- a/_posts/2019-4-19-DL-Intro-2.md
+++ b/_posts/2019-4-19-DL-Intro-2.md
@@ -1,23 +1,22 @@
 ---
 layout: post
 title: ゼロから作るDeep Learningとともに学ぶフレームワーク（3層ニューラルネットワーク ＆ 手書き数字認識編）
-description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第二弾として，Kerasで3層ニューラルネットワークの実装と手書き数字認識に取り組みます．
-mathjax: true
+description: 「ゼロから作るDeep Learning」とともに深層学習フレームワークを学ぶプロジェクト第二弾として、Kerasで3層ニューラルネットワークの実装と手書き数字認識に取り組みます。
 lang: ja_JP
 tags:
 - 「ゼロからKeras」シリーズ
 ---
 
-# はじめに
----
-このシリーズでは，深層学習の入門書として有名な，「ゼロから作るDeep Learning」（以下，ゼロから〜）と同時並行で，フレームワークを学習し，その定着を目指します．
+## はじめに
 
-前回の[第一弾: パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)に目を通していない方は，先に目を通しておくことをおすすめします．
+このシリーズでは、深層学習の入門書として有名な、「ゼロから作るDeep Learning」（以下、ゼロから〜）と同時並行で、フレームワークを学習し、その定着を目指します。
 
-それでは，今回は3層ニューラルネットワークをKerasで実装し，実際に手書き数字認識（MNISTデータセットの分類）をしていきましょう！  
+前回の[第一弾: パーセプトロン編](https://gucci-j.github.io/DL-Intro-1/)に目を通していない方は、先に目を通しておくことをおすすめします。
 
-_（3層ニューラルネットワーク）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP58〜65_  
-_（MNIST）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81_
+それでは、今回は3層ニューラルネットワークをKerasで実装し、実際に手書き数字認識（MNISTデータセットの分類）をしていきましょう！  
+
+>（3層ニューラルネットワーク）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP58〜65  
+>（MNIST）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81
 
 <div class="link_box">
     <span class="box-title">「ゼロからKeras」シリーズリンク</span>
@@ -39,26 +38,26 @@ _（MNIST）<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: 
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-# 1. 3層ニューラルネットワークの実装
----
-## 1.1 プロジェクトの作成
-まず，3層ニューラルネットワーク実装用のプロジェクトを作成してください．  
-以下本章では，`three_nn.py`を作成するものとして進めていきます．
+## 1. 3層ニューラルネットワークの実装
 
-## 1.2 モデルの作成
-* 今回の実装からは全てFunctional APIを用いたモデル実装を行います．  
-Sequentialモデルによる実装は行いませんので，あらかじめご了承ください．
+### 1.1 プロジェクトの作成
+まず、3層ニューラルネットワーク実装用のプロジェクトを作成してください。  
+以下本章では、`three_nn.py`を作成するものとして進めていきます。
 
-* これから実装する3層ニューラルネットワークの概念図を以下に示します．  
-実装の際の参考にしてください．
+### 1.2 モデルの作成
+* 今回の実装からは全てFunctional APIを用いたモデル実装を行います。  
+Sequentialモデルによる実装は行いませんので、あらかじめご了承ください。
+
+* これから実装する3層ニューラルネットワークの概念図を以下に示します。  
+実装の際の参考にしてください。
 
 <div style="text-align: center;">
     <img src="{{ site.baseurl }}/resources/2019-04-19/three_layer_nn.png" alt="3層ニューラルネットワークの概念図" style="width: 500px;"/>
 </div>
 
-### 1.2.1 レイヤー & NumPyを読み込む
-***
-まず，前回と同じように，実装に必要なレイヤーとNumPyを読み込みます．
+#### 1.2.1 レイヤー & NumPyを読み込む
+
+まず、前回と同じように、実装に必要なレイヤーとNumPyを読み込みます。
 
 ```
 from keras import Model
@@ -67,15 +66,15 @@ from keras.layers import Input, Dense
 import numpy as np
 ```
 
-### 1.2.2 各種レイヤーを定義する
-***
-* 3層のニューラルネットワークなので，それと同数の3つのDenseレイヤーのインスタンスを生成します．
+#### 1.2.2 各種レイヤーを定義する
 
-* `units`は各層におけるニューロンの数を表しています．
+* 3層のニューラルネットワークなので、それと同数の3つのDenseレイヤーのインスタンスを生成します。
 
-* 活性化関数については，ゼロから〜では`sigmoid`関数が使用されているので，ここでも`sigmoid`を活用します．  
+* `units`は各層におけるニューロンの数を表しています。
 
-* 下の例では，簡単のため入れ子式に活性化関数を定義しましたが，活性化関数をレイヤーインスタンスとして定義することもできます．  
+* 活性化関数については、ゼロから〜では`sigmoid`関数が使用されているので、ここでも`sigmoid`を活用します。  
+
+* 下の例では、簡単のため入れ子式に活性化関数を定義しましたが、活性化関数をレイヤーインスタンスとして定義することもできます。  
 
 <div style="text-align: center">＜活性化関数を入れ子式に定義する例＞</div>  
 
@@ -97,14 +96,14 @@ _layer2 = Dense(units=2)(_activ1)
 _activ2 = Activation('sigmoid')(_layer2)
 _output = Dense(units=2)(_activ2)
 ```
-_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [https://keras.io/ja/activations/](https://keras.io/ja/activations/)_
+><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [https://keras.io/ja/activations/](https://keras.io/ja/activations/)
 
 
-### 1.2.3 モデルを定義する
-***
-* 前回と同様に，入力のテンソルと出力のテンソルを`Model`に渡すことで，モデルを定義します．  
+#### 1.2.3 モデルを定義する
 
-* `model.summary()`でモデルの状態を確認することができます．
+* 前回と同様に、入力のテンソルと出力のテンソルを`Model`に渡すことで、モデルを定義します。  
+
+* `model.summary()`でモデルの状態を確認することができます。
 
 ```
 model = Model(inputs=_input, outputs=_output)
@@ -130,15 +129,15 @@ Non-trainable params: 0
 _________________________________________________________________
 ```
 
-### 1.2.4 重みを設定する
-***
-* ゼロから〜では重みの初期化を定義しているので，本実装でも事前に重みを設定します．
+#### 1.2.4 重みを設定する
 
-* Kerasでは，重みは入力層から順にNumPyの配列で保持されています．  
-したがって，重みを設定する際には，順当に重みの配列をNumPy配列で定義して，そのリストを渡せばよいです．  
+* ゼロから〜では重みの初期化を定義しているので、本実装でも事前に重みを設定します。
 
-* 重みの設定には，`model.set_weights()`を使用します．  
-引数は重みの入ったリストです．
+* Kerasでは、重みは入力層から順にNumPyの配列で保持されています。  
+したがって、重みを設定する際には、順当に重みの配列をNumPy配列で定義して、そのリストを渡せばよいです。  
+
+* 重みの設定には、`model.set_weights()`を使用します。  
+引数は重みの入ったリストです。
 
 ```
 w1 = np.array([[0.1, 0.3, 0.5], [0.2, 0.4, 0.6]])
@@ -152,7 +151,7 @@ weight_array = [w1, b1, w2, b2, w3, b3]
 model.set_weights(weight_array)
 print(model.get_weights())
 ```
-_<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜 P65_
+><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜 P65
 
 Output: 
 ```
@@ -164,11 +163,11 @@ Output:
     array([0.1, 0.2], dtype=float32)]
 ```
 
-## 1.3 テストする
-それでは，作成したモデルをテストしましょう．  
-作成したモデルのテストには，前回と同様に，`model.predict()`を使用します．
+### 1.3 テストする
+それでは、作成したモデルをテストしましょう。  
+作成したモデルのテストには、前回と同様に、`model.predict()`を使用します。
 
-テストデータは，ゼロから〜 P65に示されているものと同一のものを使用します．
+テストデータは、ゼロから〜 P65に示されているものと同一のものを使用します。
 ```
 X = np.array([[1.0, 0.5]])
 Y = model.predict(X)
@@ -181,7 +180,7 @@ Output:
 [[0.3168271 0.6962791]]
 ```
 
-見事，ゼロから〜 P65に示されている出力値と同一の値を得ることができました！
+見事、ゼロから〜 P65に示されている出力値と同一の値を得ることができました！
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 記事内広告2 -->
@@ -195,15 +194,16 @@ Output:
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-# 2. 手書き数字認識（MNIST）
----
-ここからは，今実装した3層ニューラルネットワークを活用して，手書き数字を実際に分類していきます．  
+## 2. 手書き数字認識（MNIST）
 
-_<i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81_
+ここからは、今実装した3層ニューラルネットワークを活用して、手書き数字を実際に分類していきます。  
+
+><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参考: ゼロから〜のP72〜81  
+
 ## 2.1 MNISTデータセットの読み込み
-Kerasでは，MNISTデータセットは簡単にダウンロード&呼び出しできるようになっています．
+Kerasでは、MNISTデータセットは簡単にダウンロード&呼び出しできるようになっています。
 
-`mnist_nn.py`を作成して，以下を入力し動作させてみてください．
+`mnist_nn.py`を作成して、以下を入力し動作させてみてください。
 
 ```
 from keras.datasets import mnist
@@ -212,7 +212,7 @@ from keras.datasets import mnist
 print(x_train.shape)
 print(y_train.shape)
 ```
-_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [https://keras.io/ja/datasets/#mnist](https://keras.io/ja/datasets/#mnist)_
+><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [https://keras.io/ja/datasets/#mnist](https://keras.io/ja/datasets/#mnist)
 
 Output:
 ```
@@ -220,18 +220,18 @@ Output:
 (60000,)
 ```
 
-(**注意**) Kerasの`mnist.load_data()`は，「正規化されていない & 2次元配列」の状態のリストが返ってきます．ゼロから〜のP73の挙動とは異なるので，注意してください．
+(**注意**) Kerasの`mnist.load_data()`は、「正規化されていない & 2次元配列」の状態のリストが返ってきます。ゼロから〜のP73の挙動とは異なるので、注意してください。
 
-ここで，データセットが`train`と`test`の二つに分割されていることに気がつくと思います．これは，機械学習においてはモデルの汎化性能を測定するために，通常データセットを訓練データとテストデータの二つ（もしくはそれ以上）に分割するためです．詳しくは，ゼロから〜の第4章を見てください．
+ここで、データセットが`train`と`test`の二つに分割されていることに気がつくと思います。これは、機械学習においてはモデルの汎化性能を測定するために、通常データセットを訓練データとテストデータの二つ（もしくはそれ以上）に分割するためです。詳しくは、ゼロから〜の第4章を見てください。
 
-## 2.2 データセットの前処理
-モデルの推論処理においてMNISTデータセットを活用するので，「正規化 & 一次元配列化」の処理を行っておきます．
+### 2.2 データセットの前処理
+モデルの推論処理においてMNISTデータセットを活用するので、「正規化 & 一次元配列化」の処理を行っておきます。
 
-* 配列の形状変換は`.reshape`メソッドで行えます．  
-引数は変換後の配列形状です．
+* 配列の形状変換は`.reshape`メソッドで行えます。  
+引数は変換後の配列形状です。
 
-* 正規化処理のために，リストをfloat型に変換します．  
-型変換は，`.astype`メソッドで行えます．  
+* 正規化処理のために、リストをfloat型に変換します。  
+型変換は、`.astype`メソッドで行えます。  
 
 ```
 # 一次元配列にする
@@ -251,16 +251,16 @@ Output:
 ```
 (60000, 784)
 ```
-きちんと一次元配列に変換されていることが確認できました．  
-正規化されているかどうかは，配列の要素のうち一つを表示させて確認してみてください．  
+きちんと一次元配列に変換されていることが確認できました。  
+正規化されているかどうかは、配列の要素のうち一つを表示させて確認してみてください。  
 
-## 2.2 モデルの改良
-`three_nn.py`でMNISTを分類できるように，以下の2点を改良します．   
-改良したものは，`mnist_nn.py`に追記してください． 
+### 2.2 モデルの改良
+`three_nn.py`でMNISTを分類できるように、以下の2点を改良します。   
+改良したものは、`mnist_nn.py`に追記してください。 
 
-* ゼロから〜のP76と合わせて，一層目の全結合層のunit数を50，二層目を100とし，出力層は10とします．  
+* ゼロから〜のP76と合わせて、一層目の全結合層のunit数を50、二層目を100とし、出力層は10とします。  
 
-* MNISTデータセットの分類は「**分類問題**」であるため，出力層にsoftmax層を追加します．
+* MNISTデータセットの分類は「**分類問題**」であるため、出力層にsoftmax層を追加します。
 
 ```
 from keras import Model
@@ -297,22 +297,22 @@ Trainable params: 45,360
 Non-trainable params: 0
 ```
 
-きちんと望みのモデルが実装されていることが確認できました．  
+きちんと望みのモデルが実装されていることが確認できました。  
 
-ここで，中間層の定義方法について，`three_nn.py`と書き方が変わっていると気づいた方もいるでしょう．  
+ここで、中間層の定義方法について、`three_nn.py`と書き方が変わっていると気づいた方もいるでしょう。  
 
-Functional APIを用いたモデル定義では，前回紹介したように，入力と出力のテンソルを個別に保持しておけば良いルールになっています．  
+Functional APIを用いたモデル定義では、前回紹介したように、入力と出力のテンソルを個別に保持しておけば良いルールになっています。  
 
-したがって，中間のベクトルに関しては特段利用したいケースがない限りは，同一の変数を利用した方が，コードが煩雑にならないのでおすすめです．
+したがって、中間のベクトルに関しては特段利用したいケースがない限りは、同一の変数を利用した方が、コードが煩雑にならないのでおすすめです。
 
-## 2.3 重みファイルの読み込み
-重みファイルは，ゼロから〜のものと同一のファイルを使用します．  
-* [公式レポジトリ](https://github.com/oreilly-japan/deep-learning-from-scratch/tree/master/ch03)から，`sample_weight.pkl`をダウンロードしてください．
+### 2.3 重みファイルの読み込み
+重みファイルは、ゼロから〜のものと同一のファイルを使用します。  
+* [公式レポジトリ](https://github.com/oreilly-japan/deep-learning-from-scratch/tree/master/ch03)から、`sample_weight.pkl`をダウンロードしてください。
 
-* `mnist_nn.py`と同一ディレクトリ内に`sample_weight.pkl`を配置してください．
+* `mnist_nn.py`と同一ディレクトリ内に`sample_weight.pkl`を配置してください。
 
-* 以下が，重みファイルを読み込むためのスクリプトになります．  
-なお，今回は「推論処理のみ行う & できる限りゼロから〜に即したものにする」ために，このスクリプトを使用しますが，このような手間のかかる初期化処理は通常行いません．
+* 以下が、重みファイルを読み込むためのスクリプトになります。  
+なお、今回は「推論処理のみ行う & できる限りゼロから〜に即したものにする」ために、このスクリプトを使用しますが、このような手間のかかる初期化処理は通常行いません。
 
 ```
 import pickle
@@ -328,13 +328,13 @@ def load_weight():
 model.set_weights(load_weight())
 ```
 
-_<i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [Kerasでモデルの保存/ロードを行う](https://keras.io/ja/getting-started/faq/#keras-model)_
+><i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参考: [Kerasでモデルの保存/ロードを行う](https://keras.io/ja/getting-started/faq/#keras-model)
 
-## 2.4 テストする
-それでは，ゼロから〜のP77と同様に実装したモデルをテストしていきましょう．  
+### 2.4 テストする
+それでは、ゼロから〜のP77と同様に実装したモデルをテストしていきましょう。  
 
-* `np.argmax`で軸(axis)指定をしていますが，これはリストが2次元配列以上のときに，「どの軸方向に対して演算を行うか」を指定するために活用します．  
-軸指定の詳細については，[このページ](https://deepage.net/features/numpy-axis.html)を参照するとわかりやすいです．
+* `np.argmax`で軸(axis)指定をしていますが、これはリストが2次元配列以上のときに、「どの軸方向に対して演算を行うか」を指定するために活用します。  
+軸指定の詳細については、[このページ](https://deepage.net/features/numpy-axis.html)を参照するとわかりやすいです。
 
 ```
 _y_test = model.predict(x_test)
@@ -348,15 +348,15 @@ Output:
 Accuracy: 0.9352
 ```
 
-めでたく，ゼロから〜のP77に示されている分類精度: 0.9352を得ることができました！
+めでたく、ゼロから〜のP77に示されている分類精度: 0.9352を得ることができました！
 
-# まとめ
----
-今回はゼロから〜の3章に対応する部分である，3層ニューラルネットとMNISTデータセットの分類をKerasで実装しました． 
-深層学習フレームワークを活用することで，たった数行でゼロから〜にあるものと同一のモデルを実装できることを実感したと思います．
+## まとめ
 
-次回からはゼロから〜の4章以降に対応する，ニューラルネットワークの学習に入ります！
+今回はゼロから〜の3章に対応する部分である、3層ニューラルネットとMNISTデータセットの分類をKerasで実装しました。 
+深層学習フレームワークを活用することで、たった数行でゼロから〜にあるものと同一のモデルを実装できることを実感したと思います。
 
-# ソースコード
----
-ソースコードは，[GitHub](https://github.com/gucci-j/intro-deep-learning-keras)にて公開しています．
+次回からはゼロから〜の4章以降に対応する、ニューラルネットワークの学習に入ります！
+
+## ソースコード
+
+ソースコードは、[GitHub](https://github.com/gucci-j/intro-deep-learning-keras)にて公開しています。
