Modify font settings & compress images' size

--- a/404.md
+++ b/404.md
@@ -8,4 +8,6 @@ Sorry, we can't find that page that you're looking for. You can try again by goi
 
 お探しのページは存在しません．[トップページ]({{ site.baseurl }}/) にお戻りください．
 
-[<img src="{{ site.baseurl }}/resources/404/404.png" alt="Page Not Found; ページが見つかりませんでした" style="width: 400px;"/>]({{ site.baseurl }}/)
+<div style="text-align: center;">
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/resources/404/404.jpg" alt="Page Not Found; ページが見つかりませんでした" style="width: 400px;"/></a>
+</div>
