--- a/_posts/2019-5-3-DL-Intro-4.md
+++ b/_posts/2019-5-3-DL-Intro-4.md
@@ -21,7 +21,7 @@ tags:
     <p>第二弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-2/">3層ニューラルネットワーク & 手書き数字認識編</a></p>  
     <p>第三弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-3/">ニューラルネットワークの学習編</a></p>
     <p>第四弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-4/">学習テクニック編</a></p>
-    <p>第五弾：畳み込みニューラルネットワーク編</p>
+    <p>第五弾：<i class="fas fa-link" style="padding: 0 2px 0 0;"></i><a href="https://gucci-j.github.io/DL-Intro-5/">畳み込みニューラルネットワーク編</a></p>
 </div>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -75,7 +75,7 @@ Output:
 
 なお、自力で実装をしてみたい方は、公式レポジトリを見つつ、[前回のソースコード](https://github.com/gucci-j/intro-deep-learning-keras/blob/master/chapter4%265/two_nn.py)をベースにすることをおすすめします。
 
-><i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜のP176〜P178  
+> <i class="fas fa-book-open" style="padding: 0 2px 0 0;"></i>参照: ゼロから〜のP176〜P178  
 <i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（GitHub: compare_optimizer.py）](https://github.com/gucci-j/intro-deep-learning-keras/tree/master/chapter6)  
 <i class="fas fa-link" style="padding: 0 2px 0 0;"></i>参照: [（Kerasで利用可能な最適化アルゴリズムについて）](https://keras.io/ja/optimizers/#keras)
 
